# RepiKoBot

./: .gitignore  README.md  bot.bat  bot.py  pyproject.toml
config/: config!.yaml  update.txt
help/: @.txt  __hidden.txt  general.txt  hello.txt  住口.txt  抽卡！.txt  撤回.txt
help/AA/: general.txt
help/aword/: general.txt
help/broadcast/: general.txt
help/calculate/: general.txt
help/canteen/: general.txt
help/cat/: general.txt
help/choose/: general.txt
help/deckdel/: general.txt
help/decks/: general.txt
help/deckset/: general.txt
help/duel/: code.txt  detail.txt  general.txt  quick.txt  save.txt  server.txt  set.txt
help/dueldel/: general.txt
help/duelset/: general.txt
help/help/: general.txt
help/logodraw/: general.txt
help/luck/: general.txt
help/mahjong/: general.txt
help/poke/: general.txt
help/roll/: general.txt
help/server/: general.txt
help/tex/: general.txt
help/tokana/: general.txt
help/translate/: general.txt
help/voicevox/: general.txt
help/withdraw/: general.txt
help/ycpic/: general.txt
help/ydpic/: general.txt
help/ygocard/: general.txt
help/ygocdb/: general.txt
help/ygodraw/: general.txt
help/ygoocg/: general.txt
help/ygoserver/: general.txt
repiko/: __init__.py  launch.py
repiko/config/: __init__.py  __main__.py  config.py  defaults.py  dictsub.py  loader.py  meta.py  pattern.py  util.py
repiko/core/: admin.py  api.py  bot.py  config.py  constant.py  loader.py  log.py  message.py  server.py  task.py  websocket.py
repiko/module/: __init__.py  calculator.py  deepl_translation.py  google_translatation.py  google_translation.py  helper.py  hitokoto.py  str2image.py  tex.py  util.py  ygoBG.py  ygoOurocg_ver4.py  ygoRoom.py  ygoServerRequest.py  麻将.py
repiko/module/AA/: AAHub.py  AALocal.py  AAMZ.py  __init__.py  backend.py  file.py  image.py
repiko/module/voicevox/: __init__.py  (+2 more)
repiko/msg/: admin.py  assist.py  content.py  core.py  data.py  message.py  meta.py  part.py  request.py  selector.py  util.py
repiko/plugin/: _old_basic.py  admin.py  at.py  basic.py  chat.py  deck.py  kana.py  poke.py  repi.py  test.py  trans.py  voicevox.py
(+10 files in other folders)
